# cmake_template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt
test/: CMakeLists.txt  unit_test.cpp  unit_test2.cpp
